# libmelda-sec

./: Cargo.toml  README.md
examples/: compressed.rs  encrypted.rs  endorsements.rs  simple.rs
src/: adapter.rs  deltafilter.rs  encryptionadapter.rs  keystore.rs  lib.rs  trustadapter.rs  utils.rs
src/policy/: dsl.rs  engine.rs  mod.rs  rule.rs
