[package]
name = "melda-sec"
version = "0.1.3"
edition = "2021"
description = "A pluggable security layer for Melda providing encryption, signed delta verification, role-based access control and policy enforcement on object-level changes"
license = "GPL-3.0"
authors = ["Amos Brocco"]

[dependencies]
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
globset = "0.4"
base64 = "0.21"
melda = "0.5.4"
aes-gcm = "0.10.3"
sha2 = "0.11.0"

[[example]]
name = "compressed"
path = "examples/compressed.rs"
required-features = ["melda/brotliadapter"]